git commit -m "Fix Js"

--- a/music/1/index.html
+++ b/music/1/index.html
@@ -21,6 +21,34 @@
     .theme-toggle { margin-left:20px; cursor:pointer; padding:6px 10px; border-radius:6px; border:1px solid #273044; background:var(--surface); color:var(--text); transition:background .2s; }
     .theme-toggle:hover { background:#1f2533; }
     main { padding:20px; }
+      .description-box {
+    max-width: 800px;
+    margin: 30px auto;
+    border: 2px solid #ffa500;
+    border-radius: 12px;
+    padding: 25px;
+    font-family: sans-serif;
+    line-height: 1.6;
+    color: #333;
+  }
+
+  .description-box h2 {
+    color: #e55555;
+    margin-top: 0;
+  }
+
+  .description-box h3 {
+    color: #ff8800;
+    margin-bottom: 5px;
+  }
+
+  .description-box p {
+    margin-bottom: 15px;
+  }
+
+  .description-box ul {
+    margin-left: 20px;
+  }
   </style>
 </head>
 <body>
@@ -41,8 +69,65 @@
 
   <main>
     <h1>Camcookie Archvie Radio</h1>
-<iframe src="https://camcookie876.github.io/DOCS/music/1/info.md" width="100%" height="auto" style="border:0px solid #0099ff;">
-</iframe>
+<div class="description-box">
+  <h2>🍪 What This Page Does</h2>
+
+  <p>
+    This page is an online radio that plays music from Archive.org based on whatever you search for.
+    You don’t need to know anything about coding — just type something into the search bar and the
+    radio will find audio related to it and start playing automatically.
+  </p>
+
+  <h3>🎧 What the Radio Is</h3>
+  <p>
+    Think of it like a custom radio station. You choose a topic, artist, or keyword, and the radio
+    streams audio from Archive.org. It keeps playing forever, automatically loading new tracks as
+    you listen.
+  </p>
+
+  <h3>🔍 Search Bar</h3>
+  <p>
+    At the top of the page is a search bar. Type anything you want to listen to — like “jazz”,
+    “lofi”, or “classical” — and press Go. The radio reloads with your search and starts playing
+    matching audio.
+  </p>
+
+  <h3>🎵 Now Playing</h3>
+  <p>
+    A box shows the title of the current track. It updates every time a new song starts.
+  </p>
+
+  <h3>▶️ Player Controls</h3>
+  <ul>
+    <li><strong>Play / Pause</strong> — Start or stop the music</li>
+    <li><strong>Skip</strong> — Jump to the next track</li>
+    <li><strong>Replay Last</strong> — Play the previous track again</li>
+    <li><strong>Share</strong> — Get a link to the exact track you're listening to</li>
+  </ul>
+
+  <h3>🔁 Endless Playback</h3>
+  <p>
+    The radio never stops. When a track ends, the next one starts automatically. New tracks are
+    fetched in the background so the music keeps going.
+  </p>
+
+  <h3>🔗 Share Box</h3>
+  <p>
+    Clicking Share opens a box with a link you can send to someone else. When they open it, the
+    radio starts with the same track you were listening to.
+  </p>
+  <h3>🌐 Archive.org Audio</h3>
+  <p>
+    All music comes from Archive.org — a huge public library of audio. Camcookie Music does not
+    control what plays. The radio simply streams whatever matches your search.
+  </p>
+
+  <h3>✅ Summary</h3>
+  <p>
+    This page is a search‑powered radio that streams audio from Archive.org with endless playback,
+    custom controls, a share system, and a simple access gate. Just search, press play, and enjoy.
+  </p>
+</div>
   </main>
 <script src="https://camcookie876.github.io/DOCS/find.js"></script>
 </body>
