--- a/music/index.html
+++ b/music/index.html
@@ -40,7 +40,7 @@
   </header>
 
   <main>
-    <h1>Camcookie Music Docs</h1>
+    <h1>Camcookie Music DOCS</h1>
 
   </main>
 <script src="https://camcookie876.github.io/DOCS/find.js"></script>
