git commit -m "Add Docs about Docs"

--- a/music/1/index.html
+++ b/music/1/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <header>
-    <a href="#" class="brand">
+    <a href="https://camcookie876.github.io/DOCS/" class="brand">
       <div class="brand-logo"></div>
       Camcookie DOCS
     </a>
