--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Camcookie DOCS</title>
+  <title>Music - Camcookie DOCS</title>
   <style>
     :root { --bg:#0f1115; --text:#e7ebf3; --accent:#3ab0ff; --surface:#151922; }
     body { margin:0; font-family:system-ui,sans-serif; background:var(--bg); color:var(--text); transition:background .3s,color .3s; }
     header { display:flex; align-items:center; justify-content:space-between; padding:12px 20px; background:linear-gradient(180deg,#1a1d25,#12141a); border-bottom:1px solid #222837; position:sticky; top:0; z-index:100; }
     .brand { display:flex; align-items:center; gap:10px; font-weight:bold; font-size:18px; color:var(--accent); text-decoration:none; }
     .brand-logo { width: 36px; height: 36px; border-radius: 8px; background-image: url('https://camcookie876.github.io/DOCS/logo.png'); background-size: cover; background-position: center; background-repeat: no-repeat; }    .search { position:relative; display:flex; align-items:center; gap:6px; }
+    .search { position:relative; display:flex; align-items:center; gap:6px; }
     .search input { padding:6px 10px; border-radius:6px; border:1px solid #273044; background:var(--surface); color:var(--text); outline:none; width:180px; transition: all .25s ease; }
     .search input:focus { width:260px; border-color:var(--accent); box-shadow:0 0 0 3px rgba(58,176,255,.3); background:var(--bg); }
     .search button { padding:6px 10px; border-radius:6px; border:1px solid #273044; background:var(--accent); color:#fff; cursor:pointer; transition:background .2s; }
@@ -24,7 +25,7 @@
 </head>
 <body>
   <header>
-    <a href="#" class="brand">
+    <a href="https://camcookie876.github.io/DOCS/" class="brand">
       <div class="brand-logo"></div>
       Camcookie DOCS
     </a>
@@ -39,8 +40,9 @@
   </header>
 
   <main>
-    <h1>Welcome to Camcookie DOCS</h1>
-
+    <h1>Camcookie DOCS</h1>
+<a href="https://camcookie876.github.io/DOCS/music/">Camcookie Music</a>
+<a href="https://camcookie876.github.io/DOCS/docs/">Camcookie Docs</a>
   </main>
 <script src="https://camcookie876.github.io/DOCS/find.js"></script>
 </body>
