git commit -m "Fix script"

--- a/music/index.html
+++ b/music/index.html
@@ -40,8 +40,10 @@
   </header>
 
   <main>
+<div class="description-box">
     <h1>Camcookie Music DOCS</h1>
 <a href="https://camcookie876.github.io/DOCS/music/1">Camcookie Archvie Radio</a>
+</div>
   </main>
 <script src="https://camcookie876.github.io/DOCS/find.js"></script>
 </body>
