git commit -m "Add new JS"

--- a/music/1/index.html
+++ b/music/1/index.html
@@ -101,6 +101,7 @@
   </p>
 </div>
   </main>
-<script src="https://camcookie876.github.io/DOCS/find.js"></script>
+<script src="https://camcookie876.github.io/DOCS/find.js"></script><script src='https://cdn.jotfor.ms/agent/embedjs/019ac6693b6e7f1aa80c93ca8f57f16be496/embed.js'>
+</script>
 </body>
 </html>
