--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <a href="https://camcookie876.github.io/DOCS/music/">Camcookie Music</a>
 <a href="https://camcookie876.github.io/DOCS/docs/">Camcookie Docs</a>
   </main>
-<script src="https://camcookie876.github.io/DOCS/find.js"></script>
+<script src="https://camcookie876.github.io/DOCS/find.js"></script><script src='https://cdn.jotfor.ms/agent/embedjs/019ac6693b6e7f1aa80c93ca8f57f16be496/embed.js'>
+</script>
 </body>
 </html>
