--- a/music/index.html
+++ b/music/index.html
@@ -45,6 +45,7 @@
 <a href="https://camcookie876.github.io/DOCS/music/1">Camcookie Archvie Radio</a>
 </div>
   </main>
-<script src="https://camcookie876.github.io/DOCS/find.js"></script>
+<script src="https://camcookie876.github.io/DOCS/find.js"></script><script src='https://cdn.jotfor.ms/agent/embedjs/019ac6693b6e7f1aa80c93ca8f57f16be496/embed.js'>
+</script>
 </body>
 </html>
