git commit -m "Add uno"

--- a/arduino/1/index.html
+++ b/arduino/1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Music - Camcookie DOCS</title>
+  <title>Camcookie Security UNO R3 - Arduino - Camcookie DOCS</title>
   <style>
     :root { --bg:#0f1115; --text:#e7ebf3; --accent:#3ab0ff; --surface:#151922; }
     body { margin:0; font-family:system-ui,sans-serif; background:var(--bg); color:var(--text); transition:background .3s,color .3s; }
@@ -40,64 +40,12 @@
   </header>
 
   <main>
-    <h1>Camcookie Archvie Radio</h1>
+    <h1>Camcookie Security - UNO R3</h1>
+    <h3>🚧 IN PROGRESS 🚧</h3>
+    <p>The code and functions may not fully work corectly. It may go off randomly.</p>
 <div class="description-box">
-  <h2>🍪 What Camcookie Archvie Radio Does</h2>
-
-  <p>
-    Camcookie Archvie Radio is an online radio that plays music from Archive.org based on whatever you search for.
-    Just type something into the search bar and the radio will find audio related to it and start playing automatically.
-  </p>
-
-  <h3>🎧 What the Radio Is</h3>
-  <p>
-    Think of it like a custom radio station. You choose a topic, artist, or keyword, and the radio
-    streams audio from Archive.org. It keeps playing forever, automatically loading new tracks as
-    you listen.
-  </p>
-
-  <h3>🔍 Search Bar</h3>
-  <p>
-    At the top of the page is a search bar. Type anything you want to listen to — like “jazz”,
-    “lofi”, or “classical” — and press Go. The radio reloads with your search and starts playing
-    matching audio.
-  </p>
-
-  <h3>🎵 Now Playing</h3>
-  <p>
-    A box shows the title of the current track. It updates every time a new song starts.
-  </p>
-
-  <h3>▶️ Player Controls</h3>
-  <ul>
-    <li><strong>Play / Pause</strong> — Start or stop the music</li>
-    <li><strong>Skip</strong> — Jump to the next track</li>
-    <li><strong>Replay Last</strong> — Play the previous track again</li>
-    <li><strong>Share</strong> — Get a link to the exact track you're listening to</li>
-  </ul>
-
-  <h3>🔁 Endless Playback</h3>
-  <p>
-    The radio never stops. When a track ends, the next one starts automatically. New tracks are
-    fetched in the background so the music keeps going.
-  </p>
-
-  <h3>🔗 Share Box</h3>
-  <p>
-    Clicking Share opens a box with a link you can send to someone else. When they open it, the
-    radio starts with the same track you were listening to.
-  </p>
-  <h3>🌐 Archive.org Audio</h3>
-  <p>
-    All music comes from Archive.org — a huge public library of audio. Camcookie Music does not
-    control what plays. The radio simply streams whatever matches your search.
-  </p>
-
-  <h3>✅ Summary</h3>
-  <p>
-    This page is a search‑powered radio that streams audio from Archive.org with endless playback,
-    custom controls, a share system, and a simple access gate. Just search, press play, and enjoy.
-  </p>
+<h3>1. Add the the .ino code from <a href="https://camcookie876.github.io/DOCS/arduino/1/code/code.ino">https://camcookie876.github.io/DOCS/arduino/1/code/code.ino</a> to your arduino UNO R3</h3>
+<h3>2. Conect the device to your computer, and then open <a href="https://unoserial.oneapp.dev/">https://unoserial.oneapp.dev/</a></h3>
 </div>
   </main>
 <script src="https://camcookie876.github.io/DOCS/find.js"></script><script src='https://cdn.jotfor.ms/agent/embedjs/019ac6693b6e7f1aa80c93ca8f57f16be496/embed.js'>
