git commit -m "Edit title of home page to match"

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Music - Camcookie DOCS</title>
+  <title>Home - Camcookie DOCS</title>
 <link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css">
 </head>
 <body>
