--- a/index.html
+++ b/index.html
@@ -3,30 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Home - Camcookie DOCS</title>
-<link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css">
+
+  <!-- External stylesheet -->
+  <link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css">
 </head>
 <body>
-  <header>
-    <a href="https://camcookie876.github.io/DOCS/" class="brand">
-      <div class="brand-logo"></div>
-      Camcookie DOCS
-    </a>
-    <div style="display:flex; align-items:center; gap:10px;">
-      <div class="search">
-        <input type="text" id="searchBox" placeholder="Search links...">
-        <button id="searchBtn">Search</button>
-        <div class="results" id="results"></div>
-      </div>
-      <button class="theme-toggle" id="themeToggle">Toggle Theme</button>
-    </div>
-  </header>
 
+  <!-- HEADER -->
+  <header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
+
+  <!-- MAIN CONTENT -->
   <main>
-    <h1>Camcookie DOCS</h1>
-<a href="https://camcookie876.github.io/DOCS/music/">Camcookie Music</a>
-<a href="https://camcookie876.github.io/DOCS/docs/">Camcookie Docs</a>
+    <h1>Welcome to Camcookie DOCS</h1>
+    <p>Your central hub for all Camcookie documentation, tools, and resources.</p>
+
+    <div class="warning">
+      This is a development build of Camcookie DOCS.
+    </div>
+
+    <p>Use the search bar above to quickly find pages, tools, and documentation.</p>
   </main>
-<script src="https://camcookie876.github.io/DOCS/find.js"></script><script src='https://cdn.jotfor.ms/agent/embedjs/019ac6693b6e7f1aa80c93ca8f57f16be496/embed.js'>
-</script>
+
+  <!-- JS will be added next -->
+  <script src="script.js"></script>
+
 </body>
 </html>
