git commit -m "Fix script link"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </main>
 
   <!-- JS will be added next -->
-  <script src="script.js"></script>
+  <script src="https://camcookie876.github.io/DOCS/script.js"></script>
 
 </body>
 </html>
