git commit -m "Update evrything"

--- a/arduino/1/index.html
+++ b/arduino/1/index.html
@@ -1,25 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Camcookie Security UNO R3 - Arduino - Camcookie DOCS</title>
-<link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css">
-</head>
-<body>
-  <header>
-    <a href="https://camcookie876.github.io/DOCS/" class="brand">
-      <div class="brand-logo"></div>
-      Camcookie DOCS
-    </a>
-    <div style="display:flex; align-items:center; gap:10px;">
-      <div class="search">
-        <input type="text" id="searchBox" placeholder="Search links...">
-        <button id="searchBtn">Search</button>
-        <div class="results" id="results"></div>
-      </div>
-      <button class="theme-toggle" id="themeToggle">Toggle Theme</button>
-    </div>
-  </header>
+<html lang="en"><head><meta charset="UTF-8"><title>Music - Camcookie DOCS</title><link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css"></head><body><header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
 
   <main>
     <h1>Camcookie Security - UNO R3</h1>
@@ -85,7 +66,6 @@
 <h3>6. Engoy!</h3>
 </div>
   </main>
-<script src="https://camcookie876.github.io/DOCS/find.js"></script><script src='https://cdn.jotfor.ms/agent/embedjs/019ac6693b6e7f1aa80c93ca8f57f16be496/embed.js'>
-</script>
+  <script src="https://camcookie876.github.io/DOCS/script.js"></script>
 </body>
 </html>
