--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Home - Camcookie DOCS</title>
-
-  <!-- External stylesheet -->
-  <link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css">
-</head>
-<body>
-
-  <!-- HEADER -->
-  <header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
+<html lang="en"><head><meta charset="UTF-8"><title>Music - Camcookie DOCS</title><link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css"></head><body><header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
 
   <!-- MAIN CONTENT -->
   <main>
