--- a/music/index.html
+++ b/music/index.html
@@ -1,33 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Music - Camcookie DOCS</title>
-<link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css">
-</head>
-<body>
-  <header>
-    <a href="https://camcookie876.github.io/DOCS/" class="brand">
-      <div class="brand-logo"></div>
-      Camcookie DOCS
-    </a>
-    <div style="display:flex; align-items:center; gap:10px;">
-      <div class="search">
-        <input type="text" id="searchBox" placeholder="Search links...">
-        <button id="searchBtn">Search</button>
-        <div class="results" id="results"></div>
-      </div>
-      <button class="theme-toggle" id="themeToggle">Toggle Theme</button>
-    </div>
-  </header>
+<html lang="en"><head><meta charset="UTF-8"><title>Music - Camcookie DOCS</title><link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css"></head><body><header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
 
+  <!-- MAIN CONTENT -->
   <main>
-<div class="description-box">
-    <h1>Camcookie Music DOCS</h1>
-<a href="https://camcookie876.github.io/DOCS/music/1">Camcookie Archvie Radio</a>
-</div>
+<a href="https://camcookie876.github.io/DOCS/arduino/1">Camcookie Security - UNO R3</a>
   </main>
-<script src="https://camcookie876.github.io/DOCS/find.js"></script><script src='https://cdn.jotfor.ms/agent/embedjs/019ac6693b6e7f1aa80c93ca8f57f16be496/embed.js'>
-</script>
+
+  <!-- JS will be added next -->
+  <script src="https://camcookie876.github.io/DOCS/script.js"></script>
+
 </body>
 </html>
