--- a/arduino/index.html
+++ b/arduino/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8"><title>Music - Camcookie DOCS</title><link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css"></head><body><header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
+<html lang="en"><head><meta charset="UTF-8"><title>UNO R3 - Camcookie DOCS</title><link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css"></head><body><header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
 
   <main>
-    <h1>Arduino</h1>
+    <h1>Camcookie UNO R3 Bilds</h1>
 <div class="description-box">
 <a href="https://camcookie876.github.io/DOCS/arduino/1">Camcookie Security - UNO R3</a>
 </div>
