--- a/music/1/index.html
+++ b/music/1/index.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8"><title>Music - Camcookie DOCS</title><link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css"></head><body><header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
+<html lang="en"><head><meta charset="UTF-8"><title>Archive Radio - Music - Camcookie DOCS</title><link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css"></head><body><header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
 
-  <main>
-    <h1>Camcookie Archvie Radio</h1>
-<div class="description-box">
-  <h2>🍪 What Camcookie Archvie Radio Does</h2>
+<main>
+  <h1>Archive Radio</h1>
 
-  <p>
-    Camcookie Archvie Radio is an online radio that plays music from Archive.org based on whatever you search for.
-    Just type something into the search bar and the radio will find audio related to it and start playing automatically.
-  </p>
+  <div class="description-box">
 
-  <h3>🎧 What the Radio Is</h3>
-  <p>
-    Think of it like a custom radio station. You choose a topic, artist, or keyword, and the radio
-    streams audio from Archive.org. It keeps playing forever, automatically loading new tracks as
-    you listen.
-  </p>
+    <h2>🍪 What Camcookie Archive Radio Does</h2>
+    <p>
+      Camcookie Archive Radio is an online radio that streams audio from Archive.org based on whatever you search for.
+      Type something into the search bar and the radio automatically finds matching audio and begins playing.
+    </p>
 
-  <h3>🔍 Search Bar</h3>
-  <p>
-    At the top of the page is a search bar. Type anything you want to listen to — like “jazz”,
-    “lofi”, or “classical” — and press Go. The radio reloads with your search and starts playing
-    matching audio.
-  </p>
+    <h3>🎧 What the Radio Is</h3>
+    <p>
+      Think of it as your own custom radio station. You choose a topic, artist, or keyword, and the radio streams audio
+      from Archive.org. It keeps going forever, loading new tracks as you listen.
+    </p>
 
-  <h3>🎵 Now Playing</h3>
-  <p>
-    A box shows the title of the current track. It updates every time a new song starts.
-  </p>
+    <h3>🔍 Search Bar</h3>
+    <p>
+      At the top of the page is a search bar. Enter anything — “jazz”, “lofi”, “classical”, or anything else — and press
+      Go. The radio reloads with your search and starts playing matching audio instantly.
+    </p>
 
-  <h3>▶️ Player Controls</h3>
-  <ul>
-    <li><strong>Play / Pause</strong> — Start or stop the music</li>
-    <li><strong>Skip</strong> — Jump to the next track</li>
-    <li><strong>Replay Last</strong> — Play the previous track again</li>
-    <li><strong>Share</strong> — Get a link to the exact track you're listening to</li>
-  </ul>
+    <h3>🎵 Now Playing</h3>
+    <p>
+      A Now Playing box shows the title of the current track. It updates automatically whenever a new track begins.
+    </p>
 
-  <h3>🔁 Endless Playback</h3>
-  <p>
-    The radio never stops. When a track ends, the next one starts automatically. New tracks are
-    fetched in the background so the music keeps going.
-  </p>
+    <h3>▶️ Player Controls</h3>
+    <ul>
+      <li><strong>Play / Pause</strong> — Start or stop the music</li>
+      <li><strong>Skip</strong> — Jump to the next track</li>
+      <li><strong>Replay Last</strong> — Play the previous track again</li>
+      <li><strong>Share</strong> — Get a link to the exact track you're listening to</li>
+    </ul>
 
-  <h3>🔗 Share Box</h3>
-  <p>
-    Clicking Share opens a box with a link you can send to someone else. When they open it, the
-    radio starts with the same track you were listening to.
-  </p>
-  <h3>🌐 Archive.org Audio</h3>
-  <p>
-    All music comes from Archive.org — a huge public library of audio. Camcookie Music does not
-    control what plays. The radio simply streams whatever matches your search.
-  </p>
+    <h3>🔁 Endless Playback</h3>
+    <p>
+      The radio never stops. When a track ends, the next one starts automatically. New tracks are fetched in the
+      background so the music keeps flowing.
+    </p>
 
-  <h3>✅ Summary</h3>
-  <p>
-    This page is a search‑powered radio that streams audio from Archive.org with endless playback,
-    custom controls, a share system, and a simple access gate. Just search, press play, and enjoy.
-  </p>
-</div>
-  </main>
+    <h3>🔗 Share Box</h3>
+    <p>
+      Clicking Share opens a box with a link you can send to someone else. When they open it, the radio starts with the
+      same track you were listening to.
+    </p>
+
+    <h3>🌐 Archive.org Audio</h3>
+    <p>
+      All audio comes from Archive.org — a massive public library of sound. Camcookie Music does not control what plays;
+      the radio simply streams whatever matches your search.
+    </p>
+
+    <h3>✅ Summary</h3>
+    <p>
+      Camcookie Archive Radio is a search‑powered radio that streams audio from Archive.org with endless playback,
+      custom controls, a share system, and a simple access gate. Just search, press play, and enjoy.
+    </p>
+
+  </div>
+</main>
   <script src="https://camcookie876.github.io/DOCS/script.js"></script>
 </body>
 </html>
