--- a/music/index.html
+++ b/music/index.html
@@ -3,7 +3,8 @@
 
   <!-- MAIN CONTENT -->
   <main>
-<a href="https://camcookie876.github.io/DOCS/arduino/1">Camcookie Security - UNO R3</a>
+    <h1>Camcookie Music</h1>
+    <a href="https://camcookie876.github.io/DOCS/arduino/1">Camcookie Security - UNO R3</a>
   </main>
 
   <!-- JS will be added next -->
