git commit -m "Add noscript"

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta charset="UTF-8"><title>Music - Camcookie DOCS</title><link rel="stylesheet" href="https://camcookie876.github.io/DOCS/styles.css"></head><body><header><a href="https://camcookie876.github.io/DOCS/" class="brand"><div class="brand-logo"></div>Camcookie DOCS</a><div style="display:flex; align-items:center; gap:10px;"><div class="search"><input type="text" id="searchBox" placeholder="Search links..."><button id="searchBtn">Search</button><div class="results" id="results"></div></div><button class="theme-toggle" id="themeToggle">Toggle Theme</button></div></header>
+<noscript>
+<div class="noscript-warning"><h3>⚠️ JavaScript Required</h3><p>Camcookie DOCS needs JavaScript to run search, theme toggle, and page features.</p></div></noscript>
 
   <!-- MAIN CONTENT -->
   <main>
     <h1>Welcome to Camcookie DOCS</h1>
     <p>Your central hub for all Camcookie documentation, tools, and resources.</p>
-
-    <div class="warning">
-      This is a development build of Camcookie DOCS.
-    </div>
-
     <p>Use the search bar above to quickly find pages, tools, and documentation.</p>
   </main>
 
