git commit -m "Add ads"

--- a/arduino/1/index.html
+++ b/arduino/1/index.html
@@ -5,6 +5,7 @@
 
 <main>
   <h1>Camcookie Security – UNO R3</h1>
+  <div data-camcookie-ad class="ad-slot"></div>
 
   <div class="warning">
     <h3>🚧 IN PROGRESS 🚧</h3>
