--- a/arduino/index.html
+++ b/arduino/index.html
@@ -4,6 +4,7 @@
 
   <main>
     <h1>Camcookie UNO R3 Bilds</h1>
+    <div data-camcookie-ad class="ad-slot"></div>
 <div class="description-box">
 <a href="https://camcookie876.github.io/DOCS/arduino/1">Camcookie Security - UNO R3</a>
 </div>
