--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!-- MAIN CONTENT -->
   <main>
     <h1>Welcome to Camcookie DOCS</h1>
+    <div data-camcookie-ad class="ad-slot"></div>
     <p>Your central hub for all Camcookie documentation, tools, and resources.</p>
     <p>Use the search bar above to quickly find pages, tools, and documentation.</p>
   </main>
