--- a/music/index.html
+++ b/music/index.html
@@ -5,6 +5,7 @@
   <!-- MAIN CONTENT -->
   <main>
     <h1>Camcookie Music</h1>
+    <div data-camcookie-ad class="ad-slot"></div>
     <a href="https://camcookie876.github.io/DOCS/arduino/1">Camcookie Security - UNO R3</a>
   </main>
 
