--- a/arduino/1/index.html
+++ b/arduino/1/index.html
@@ -97,5 +97,6 @@
   </div>
 </main>
   <script src="https://camcookie876.github.io/DOCS/script.js"></script>
+  <script src="https://camcookie876.github.io/ads/ads.js"></script>
 </body>
 </html>
