--- a/music/index.html
+++ b/music/index.html
@@ -11,6 +11,6 @@
 
   <!-- JS will be added next -->
   <script src="https://camcookie876.github.io/DOCS/script.js"></script>
-
+  <script src="https://camcookie876.github.io/ads/ads.js"></script>
 </body>
 </html>
