--- a/music/1/index.html
+++ b/music/1/index.html
@@ -66,5 +66,6 @@
   </div>
 </main>
   <script src="https://camcookie876.github.io/DOCS/script.js"></script>
+  <script src="https://camcookie876.github.io/ads/ads.js"></script>
 </body>
 </html>
